| Bug #47832 | MT DD crash during SR in Dbtup::disk_page_free | ||
|---|---|---|---|
| Submitted: | 5 Oct 12:45 | Modified: | 2 Nov 22:16 |
| Reporter: | Pekka Nousiainen | ||
| Status: | Closed | ||
| Category: | Server: ClusterDD | Severity: | S2 (Serious) |
| Version: | mysql-5.1-telco-7.0 | OS: | Any |
| Assigned to: | Pekka Nousiainen | Target Version: | |
| Triage: | Triaged: D1 (Critical) / R6 (Needs Assessment) / E6 (Needs Assessment) | ||
[5 Oct 12:45]
Pekka Nousiainen
[19 Oct 16:06]
Pekka Nousiainen
Above crash is caused (at least) by LCP of fragment which has become empty (scan pos was not initialized). So a better test case was: testSystemRestart -n SR_DD_2b_LCP -r 1 D1
[20 Oct 17:12]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/87488 3023 Pekka Nousiainen 2009-10-20 bug#47832 01_lcp.diff Fix un-initialized scan position of LCP scan of empty fragment and make the scan state a bit more explicit.
[2 Nov 20:58]
Jonas Oreland
pushed to 6.2.19, 6.3.28 and 7.0.9
[2 Nov 22:16]
Jon Stephens
Documented bugfix in the NDB-6.2.19, 6.3.28, and 7.0.9 changelogs, as follows:
A local checkpoint of an empty fragment could cause a data node
crash.
Closed.
[3 Nov 8:15]
Jon Stephens
Per discussion with Pekka, revised changelog entry to read
A local checkpoint of an empty fragment could cause a crash
during a system restart which was based on that LCP.
