bug#47832 01_lcp.diff Fix un-initialized scan position of LCP scan of empty fragment and make the scan state a bit more explicit.